Working to fix styling error on iphone6-8

--- a/resume_website/src/styles/Footer.css
+++ b/resume_website/src/styles/Footer.css
@@ -463,7 +463,7 @@
         flex-direction: column;
     }
     #footer .footer-img{
-        padding: 1rem 0;
+        padding: 0.5rem 0 0.75rem;
     }
     
     #footer .footer-img img{
@@ -478,7 +478,8 @@
     
     #footer .footer-tagline h3{
         width: 100%;
-        font-size: 1.35rem;
+        line-height: 1;
+        font-size: 1.25rem;
         text-align: center;
     }
     
@@ -490,7 +491,7 @@
     #footer .footer-container .footer-bot{
         height: 45%;
         width: 100%;
-        padding-top: 0.85rem;
+        padding-top: 0.25rem;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -550,9 +551,8 @@
         flex-direction: column;
     }
     #footer .footer-img{
-        padding-bottom: 0.75rem;
+        padding: 0  0 1rem;
     }
-    
     #footer .footer-img img{
         border-radius: 50%;
         max-width: 100px;
